@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2016,v 1.4125 2016/10/05 13:09:59 wiz Exp $
+$NetBSD: CHANGES-2016,v 1.4126 2016/10/05 19:49:07 shattered Exp $
 
 Changes to the packages collection and infrastructure in 2016:
 
@@ -5759,3 +5759,4 @@ Changes to the packages collection and infrastructure in 2016:
 	Updated devel/p5-Sub-Name to 0.21 [wiz 2016-10-05]
 	Updated textproc/py-html2text to 2016.9.19 [wiz 2016-10-05]
 	Updated games/puzzles to 20160429 [wiz 2016-10-05]
+	Updated databases/p5-DBD-Oracle to 1.74 [shattered 2016-10-05]
